--- a/cssbattle/lvl-1-.html
+++ b/cssbattle/lvl-1-.html
@@ -1,28 +1,16 @@
 <!-- https://cssbattle.dev/play/1 -->
 
-<div class="background">
-  <div class="green"></div>
-</div>
-
+<div class="g"></div>
 <style>
-  .background {
-    top: 0;
-    right: 0;
-    position: absolute;
-    height: 100%;
-    width: 100%;
+  body {
     background: #5d3a3a;
   }
 
-  .green {
+  .g {
+    inset: 0;
+    position: absolute;
     width: 200px;
     height: 200px;
     background: #b5e0ba;
-  }
-
-  div {
-    width: 100px;
-    height: 100px;
-    background: #dd6b4d;
   }
 </style>
