--- a/cssbattle/lvl-1-1.html
+++ b/cssbattle/lvl-1-1.html
@@ -1,13 +1,16 @@
-<div></div>
+<!-- https://cssbattle.dev/play/1 -->
+
+<div class="g"></div>
 <style>
   body {
-    background: #0B2429;
-    margin: 0;
+    background: #5d3a3a;
   }
 
-  div {
-    width: 0;
-    border: 70px solid;
-    border-color: #F3AC3C transparent transparent #F3AC3C;
+  .g {
+    inset: 0;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background: #b5e0ba;
   }
 </style>
