--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -2,20 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Product preview card component</title>
 </head>
 <body>
-
+  <div>
+    <!-- trying to commit -->
+  </div>
   Preview
 
   Gabrielle Essence Eau De Parfum
@@ -26,8 +20,10 @@
   $149.99
   $169.99
 
-  Add to Cart
-  
+  Add to Cart..
+  <div>
+    
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
