--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -7,7 +7,7 @@
   <title>Product preview card component</title>
 </head>
 <body>
-  Preview
+  <!-- Preview
 
   Gabrielle Essence Eau De Parfum
 
@@ -17,13 +17,13 @@
   $149.99
   $169.99
 
-  Add to Cart..
+  Add to Cart.. -->
   <div>
     
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Derek Cruz</a>.
   </div>
 </body>
 </html>
