--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   <title>Product preview card component</title>
 </head>
 <body>
-  <!-- Preview
+  Preview
 
   Gabrielle Essence Eau De Parfum
 
@@ -17,7 +18,7 @@
   $149.99
   $169.99
 
-  Add to Cart.. -->
+  Add to Cart..
   <div>
     
   </div>
