--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -8,20 +8,15 @@
   <title>Product preview card component</title>
 </head>
 <body>
-  Preview
+  <h1>Gabrielle Essence Eau De Parfum</h1>
 
-  Gabrielle Essence Eau De Parfum
+  <div>floral, solar and voluptuous interpretation composed by Olivier Polge, 
+  Perfumer-Creator for the House of CHANEL.</div> 
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+  <div>$149.99</div>
+  <div>$169.99</div>
 
-  $149.99
-  $169.99
-
-  Add to Cart..
-  <div>
-    
-  </div>
+  <button>Add to Cart..</button>  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Derek Cruz</a>.
