--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -8,15 +8,20 @@
   <title>Product preview card component</title>
 </head>
 <body>
-  <h1>Gabrielle Essence Eau De Parfum</h1>
-
-  <div>floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.</div> 
-
-  <div>$149.99</div>
-  <div>$169.99</div>
-
-  <button>Add to Cart..</button>  
+  <div class="overall">
+    <div class="place">
+      <h1 >Gabrielle Essence Eau De Parfum</h1>
+    </div>
+    <div class="place">
+      <div>
+        floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.
+      </div> 
+      <p>$149.99</p>
+      <p>$169.99</p>
+      <button>Add to Cart..</button>  
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Derek Cruz</a>.
