--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -22,9 +22,9 @@
       <button>Add to Cart..</button>  
     </div>
   </div>
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Derek Cruz</a>.
-  </div>
+  </div> -->
 </body>
 </html>
