--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -17,8 +17,8 @@
         floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.
       </div> 
-      <p>$149.99</p>
-      <p>$169.99</p>
+      <p class="p">$149.99</p>
+      <p class="p">$169.99</p>
       <button>Add to Cart..</button>  
     </div>
   </div>
