--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -19,7 +19,7 @@
       </div> 
       <p class="p">$149.99</p>
       <p class="p">$169.99</p>
-      <button>Add to Cart..</button>  
+      <button class="button-style">Add to Cart..</button>  
     </div>
   </div>
 </body>
