--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -16,7 +16,8 @@
       <div>
         floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.
-      </div> 
+      </div>
+      <img src="./img/image-product-desktop.jpg" alt="pic"> 
       <p class="p">$149.99</p>
       <p class="p">$169.99</p>
       <button class="button-style">Add to Cart..</button>  
