--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -13,11 +13,13 @@
       <h1 >Gabrielle Essence Eau De Parfum</h1>
     </div>
     <div class="place">
+      <div class="test">
+        <img src="./img/image-product-desktop.jpg" alt="pic"> 
+      </div>
       <div>
         floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.
       </div>
-      <img src="./img/image-product-desktop.jpg" alt="pic"> 
       <p class="p">$149.99</p>
       <p class="p">$169.99</p>
       <button class="button-style">Add to Cart..</button>  
