--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -20,9 +20,13 @@
         floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.
       </div>
-      <p class="p">$149.99</p>
-      <p class="p">$169.99</p>
-      <button class="button-style">Add to Cart..</button>  
+      <div class="place"> 
+        <p class="p">$149.99</p>
+        <p class="p">$169.99</p>
+      </div>
+      <div class="place">
+        <button class="button-style">Add to Cart..</button>  
+      </div>
     </div>
   </div>
 </body>
