--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -8,7 +8,7 @@
   <title>Product preview card component</title>
 </head>
 <body>
-  <div class="overall">
+  <!-- <div class="overall">
     <div class="place">
       <h1 >Gabrielle Essence Eau De Parfum</h1>
     </div>
@@ -24,7 +24,7 @@
         <p class="p">$149.99</p>
         <p class="p">$169.99</p>
       </div>
-      <div class="place">
+      <div class="place"> -->
         <button class="button-style">Add to Cart..</button>  
       </div>
     </div>
