--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="overall">
-    <div class="place">
+    <!-- <div class="place">
       <h1 >Gabrielle Essence Eau De Parfum</h1>
-    </div>
+    </div> -->
     <div class="place">
       <div class="test">
         <img src="./img/image-product-desktop.jpg" alt="pic"> 
@@ -20,13 +20,13 @@
         floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.
       </div>
-      <div class="place"> 
+      <!-- <div class="place"> 
         <p class="p">$149.99</p>
         <p class="p">$169.99</p>
-      </div>
-      <!-- <div class="place">
-        <button class="button-style">Add to Cart..</button>  
       </div> -->
+      <div class="place">
+        <button class="button-style">Add to Cart..</button>  
+      </div>
     </div>
   </div>
 </body>
