working on css.

--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -9,23 +9,25 @@
 </head>
 <body>
   <div class="overall">
-    <!-- <div class="place">
-      <h1 >Gabrielle Essence Eau De Parfum</h1>
-    </div> -->
-    <div class="place">
-      <div class="test">
-        <img src="./img/image-product-desktop.jpg" alt="pic"> 
-      </div>
-      <div>
-        floral, solar and voluptuous interpretation composed by Olivier Polge, 
-        Perfumer-Creator for the House of CHANEL.
-      </div>
-      <!-- <div class="place"> 
-        <p class="p">$149.99</p>
-        <p class="p">$169.99</p>
-      </div> -->
+    <div class="row">
       <div class="place">
-        <button class="button-style">Add to Cart..</button>  
+        <h1 >Gabrielle Essence Eau De Parfum</h1>
+      </div>
+      <div class="place">
+        <div class="test">
+          <img src="./img/image-product-desktop.jpg" alt="pic"> 
+        </div>
+        <div>
+          floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.
+        </div>
+        <div class="place"> 
+          <p class="p">$149.99</p>
+          <p class="p">$169.99</p>
+        </div>
+        <div class="place">
+          <button class="button-style">Add to Cart..</button>  
+        </div>
       </div>
     </div>
   </div>
