--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -25,9 +25,9 @@
           <p class="p">$149.99</p>
           <p class="p">$169.99</p>
         </div>
-        <!-- <div class="butt-place">
+        <div class="button-place">
           <button class="button-style">Add to Cart..</button>  
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
