--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -17,6 +17,13 @@
         <div class="test">
           <img src="./img/image-product-desktop.jpg" alt="pic"> 
         </div>
+
+        <div>
+          <div>
+            <p>testing</p>
+          </div>
+        </div>
+        
         <div>
           floral, solar and voluptuous interpretation composed by Olivier Polge, 
           Perfumer-Creator for the House of CHANEL.
