--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -18,11 +18,11 @@
           <img src="./img/image-product-desktop.jpg" alt="pic"> 
         </div>
 
-        <div>
+        <!-- <div>
           <div>
             <p>testing</p>
           </div>
-        </div>
+        </div> -->
         
         <div>
           floral, solar and voluptuous interpretation composed by Olivier Polge, 
