--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -8,7 +8,7 @@
   <title>Product preview card component</title>
 </head>
 <body>
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="style">
         <h1 >Gabrielle Essence Eau De Parfum</h1>
@@ -37,6 +37,6 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </body>
 </html>
