--- a/frontendmentor/card-component/index.html
+++ b/frontendmentor/card-component/index.html
@@ -8,7 +8,7 @@
   <title>Product preview card component</title>
 </head>
 <body>
-  <!-- <div class="container">
+  <div class="container">
     <div class="row">
       <div class="style">
         <h1 >Gabrielle Essence Eau De Parfum</h1>
@@ -17,13 +17,6 @@
         <div class="test">
           <img src="./img/image-product-desktop.jpg" alt="pic"> 
         </div>
-
-        <div>
-          <div>
-            <p>testing</p>
-          </div>
-        </div>
-        
         <div>
           floral, solar and voluptuous interpretation composed by Olivier Polge, 
           Perfumer-Creator for the House of CHANEL.
@@ -37,6 +30,6 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 </body>
 </html>
