--- a/cssbattle/lvl-1-13.html
+++ b/cssbattle/lvl-1-13.html
@@ -1,11 +1,14 @@
 <!-- starting new -->
-<!-- <div>
-
+<div>
+    <div class="c"></div>
 </div>
-<style>
+<!-- <style>
     div. {
 
     }
 
+    c. {
+        
+    }
 
 </style> -->
