--- a/cssbattle/lvl-1-13.html
+++ b/cssbattle/lvl-1-13.html
@@ -2,13 +2,13 @@
 <div>
     <div class="c"></div>
 </div>
-<!-- <style>
+<style>
     div. {
-
+        color: aliceblue;
     }
 
     c. {
-        
+       color: yellowgreen; 
     }
 
-</style> -->
+</style>
