--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!-- 0000 0000 0000 0000
+  0000 0000 0000 0000
   Jane Appleseed
   00/00
 
@@ -33,7 +33,7 @@
 
   Thank you!
   We've added your card details
-  Continue -->
+  Continue
   <div>
     TESTING
   </div>
