--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -34,8 +34,8 @@
   Thank you!
   We've added your card details
   Continue
-  <!-- <div>
+  <div>
     TESTING
-  </div> -->
+  </div>
 </body>
 </html>
