--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -35,7 +35,11 @@
   We've added your card details
   Continue
   <div>
+    <div>
+
+    </div>
     TESTING
   </div>
+  <script href="main.js"></script>
 </body>
 </html>
