--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -35,11 +35,7 @@
   We've added your card details
   Continue
   <div>
-    <div>
-
-    </div>
-    TESTING
   </div>
-  <script href="main.js"></script>
+  <!-- <script href="main.js"></script> -->
 </body>
 </html>
