--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -35,6 +35,7 @@
   We've added your card details
   Continue
   <div>
+    <!-- <img src="./img/image-product-desktop.jpg" alt="pic">  -->
   </div>
   <script href="main.js"></script>
 </body>
