--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -34,6 +34,9 @@
   Thank you!
   We've added your card details
   Continue
+  <div class="btn btn-one">
+    <span>HOVER ME</span>
+  </div>
   <div>
     <!-- <img src="./img/image-product-desktop.jpg" alt="pic">  -->
   </div>
