--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -40,6 +40,6 @@
   <div>
     <!-- <img src="./img/image-product-desktop.jpg" alt="pic">  -->
   </div>
-  <script href="main.js"></script>
+  <!-- <script href="main.js"></script> -->
 </body>
 </html>
