--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -38,8 +38,8 @@
     <span>HOVER ME</span>
   </div>
   <div>
-    <!-- <img src="./img/image-product-desktop.jpg" alt="pic">  -->
+    <img src="./img/image-product-desktop.jpg" alt="pic"> 
   </div>
-  <!-- <script href="main.js"></script> -->
+  <script href="main.js"></script>
 </body>
 </html>
