--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -34,12 +34,12 @@
   Thank you!
   We've added your card details
   Continue
-  <div class="btn btn-one">
+  <!-- <div class="btn btn-one">
     <span>HOVER ME</span>
   </div>
   <div>
     <img src="./img/image-product-desktop.jpg" alt="pic"> 
-  </div>
+  </div> -->
   <script href="main.js"></script>
 </body>
 </html>
