--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
-
+  <div>
   0000 0000 0000 0000
   Jane Appleseed
   00/00
@@ -34,12 +34,14 @@
   Thank you!
   We've added your card details
   Continue
-  <!-- <div class="btn btn-one">
+  </div>
+
+  <div class="btn btn-one">
     <span>HOVER ME</span>
   </div>
   <div>
     <img src="./img/image-product-desktop.jpg" alt="pic"> 
-  </div> -->
+  </div>
   <script href="main.js"></script>
 </body>
 </html>
