--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div>
-    <img src="./img/image-product-desktop.jpg" alt="pic"> 
+    <!-- <img src="./img/image-product-desktop.jpg" alt="pic">  -->
   </div>
   <script href="main.js"></script>
 </body>
