--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
-  <div>
+  <!-- <div>
   0000 0000 0000 0000
   Jane Appleseed
   00/00
@@ -34,7 +34,7 @@
   Thank you!
   We've added your card details
   Continue
-  </div>
+  </div> -->
   <script href="main.js"></script>
 </body>
 </html>
