--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -8,33 +8,38 @@
   <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
-  <!-- <div>
+  <div>
   0000 0000 0000 0000
   Jane Appleseed
   00/00
 
   000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
-
-
-  Thank you!
-  We've added your card details
-  Continue
-  </div> -->
+  <div>
+    Cardholder Name
+    e.g. Jane Appleseed
+  </div>
+  <div>
+    Card Number
+    e.g. 1234 5678 9123 0000   
+  </div>
+  <div>
+    Exp. Date (MM/YY)
+    MM
+    YY  
+  </div>
+  <div>
+    CVC
+    e.g. 123   
+  </div>
+  <div>
+    Confirm   
+  </div>
+  <div class="hidden">
+    Thank you!
+    We've added your card details
+  </div>
+  <button>Continue</button>
+  </div>
   <script href="main.js"></script>
 </body>
 </html>
