--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
-  <div>
+  <!-- <div>
   0000 0000 0000 0000
   Jane Appleseed
   00/00
@@ -39,7 +39,7 @@
     We've added your card details
   </div>
   <button>Continue</button>
-  </div>
+  </div> -->
   <script href="main.js"></script>
 </body>
 </html>
