--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
-  <!-- <div>
+  <div>
   0000 0000 0000 0000
   Jane Appleseed
   00/00
@@ -38,8 +38,8 @@
     Thank you!
     We've added your card details
   </div>
-  <button>Continue</button>
-  </div> -->
+  <!-- <button>Continue</button> -->
+  </div>
   <script href="main.js"></script>
 </body>
 </html>
