--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -38,7 +38,7 @@
     Thank you!
     We've added your card details
   </div>
-  <!-- <button>Continue</button> -->
+  <button>Continue</button>
   </div>
   <script href="main.js"></script>
 </body>
