--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
-  <div>
+  <div class="divP">
   0000 0000 0000 0000
   Jane Appleseed
   00/00
