--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -14,24 +14,24 @@
   00/00
 
   000
-  <div>
+  <div class="divP">
     Cardholder Name
     e.g. Jane Appleseed
   </div>
-  <div>
+  <div class="divP">
     Card Number
     e.g. 1234 5678 9123 0000   
   </div>
-  <div>
+  <div class="divP">
     Exp. Date (MM/YY)
     MM
     YY  
   </div>
-  <div>
+  <div class="divP">
     CVC
     e.g. 123   
   </div>
-  <div>
+  <div class="divP">
     Confirm   
   </div>
   <div class="hidden">
