--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -8,37 +8,38 @@
   <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
-  <div class="divP">
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-  <div class="divP">
-    Cardholder Name
-    e.g. Jane Appleseed
-  </div>
-  <div class="divP">
-    Card Number
-    e.g. 1234 5678 9123 0000   
-  </div>
-  <div class="divP">
-    Exp. Date (MM/YY)
-    MM
-    YY  
-  </div>
-  <div class="divP">
-    CVC
-    e.g. 123   
-  </div>
-  <div class="divP">
-    Confirm   
-  </div>
-  <div class="hidden">
-    Thank you!
-    We've added your card details
-  </div>
-  <button>Continue</button>
+  <div class="container">
+    <div class="divP">
+      0000 0000 0000 0000
+      Jane Appleseed
+      00/00
+      000
+      <div class="divP">
+        Cardholder Name
+        e.g. Jane Appleseed
+      </div>
+      <div class="divP">
+        Card Number
+        e.g. 1234 5678 9123 0000   
+      </div>
+      <div class="divP">
+        Exp. Date (MM/YY)
+        MM
+        YY  
+      </div>
+      <div class="divP">
+        CVC
+        e.g. 123   
+      </div>
+      <div class="divP">
+        Confirm   
+      </div>
+      <div class="hidden">
+        Thank you!
+        We've added your card details
+      </div>
+      <button>Continue</button>
+    </div>
   </div>
   <script href="main.js"></script>
 </body>
