testing and push.

--- a/frontendmentor/interactive card/index.html
+++ b/frontendmentor/interactive card/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="divP">
+    <!-- <div class="divP">
       0000 0000 0000 0000
       Jane Appleseed
       00/00
@@ -39,7 +39,7 @@
         We've added your card details
       </div>
       <button>Continue</button>
-    </div>
+    </div> -->
   </div>
   <script href="main.js"></script>
 </body>
